# POS---nahodny-chodca

./: CMakeLists.txt
client/: CMakeLists.txt  client.c  client.h  drawThread.c  drawThread.h  inputThread.c  inputThread.h  menu.c  menu.h
server/: CMakeLists.txt  server.c  server.h  simThread.c  simThread.h  simulation.c  simulation.h  simulationStructs.c  simulationStructs.h
shm/: buffer.c  buffer.h  names.c  names.h  shm.c  shm.h  synBuffer.c  synBuffer.h
